# server_go/controller/req/user_req.go
@@ -1,6 +1,11 @@
 package req
 
-type CreateUserReq struct {
+type SignupReq struct {
+	Name     string `json:"name" binding:"required,gte=3,lte=20"`
+	Password string `json:"password" binding:"required,gte=3,lte=32"`
+}
+
+type SignInReq struct {
 	Name     string `json:"name" binding:"required,gte=3,lte=20"`
 	Password string `json:"password" binding:"required,gte=3,lte=32"`
 }
