# server_go/controller/resp/user_resp.go
@@ -1,1 +1,6 @@
 package resp
+
+type SignInResp struct {
+	UserName  string `json:"username"`
+	UserToken string `json:"user_token"`
+}
