# server_go/domain/entity/user.go
@@ -1,6 +1,11 @@
 package entity
 
-import "server-go/pkg/utils"
+import (
+	"github.com/google/uuid"
+	"server-go/pkg/utils"
+	"strconv"
+	"time"
+)
 
 type User struct {
 	BaseModel
@@ -10,7 +15,16 @@ type User struct {
 	//Status       int8   `gorm:"type:tinyint;not null;comment:'用户状态'" json:"status"`
 }
 
+func (u *User) GenPasswordHash(password string) string {
+	return utils.Md5(password)
+}
+
 func (u *User) VerifyPassword(password string) bool {
 	// 这里的password还是明文密码
-	return utils.Md5(password) == u.PasswordHash
+	return u.GenPasswordHash(password) == u.PasswordHash
+}
+
+func (u *User) GenUserToken() string {
+	// 随机字符串
+	return utils.Md5(uuid.New().String() + strconv.Itoa(time.Now().Second()))
 }
